# timey

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci-windows.yml
assets/zoneinfo/: tzdata.zi
include/timey/: core_time.hpp
src/cli/: main.cpp
src/core_time/: core_time.cpp
tests/: time_ny_roundtrip.test.cpp  time_utc_roundtrip.test.cpp  toolchain_smoke.test.cpp
